; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_update-index.c_refresh.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_update-index.c_refresh.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.refresh_params = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.refresh_params*, i32)* @refresh to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @refresh(%struct.refresh_params* %0, i32 %1) #0 {
  %3 = alloca %struct.refresh_params*, align 8
  %4 = alloca i32, align 4
  store %struct.refresh_params* %0, %struct.refresh_params** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = call i32 (...) @setup_work_tree()
  %6 = call i32 (...) @read_cache()
  %7 = load %struct.refresh_params*, %struct.refresh_params** %3, align 8
  %8 = getelementptr inbounds %struct.refresh_params, %struct.refresh_params* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = load i32, i32* %4, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @refresh_cache(i32 %11)
  %13 = load %struct.refresh_params*, %struct.refresh_params** %3, align 8
  %14 = getelementptr inbounds %struct.refresh_params, %struct.refresh_params* %13, i32 0, i32 1
  %15 = load i32*, i32** %14, align 8
  %16 = load i32, i32* %15, align 4
  %17 = or i32 %16, %12
  store i32 %17, i32* %15, align 4
  ret i32 0
}

declare dso_local i32 @setup_work_tree(...) #1

declare dso_local i32 @read_cache(...) #1

declare dso_local i32 @refresh_cache(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
